--- a/data607/607 Discussion/Data607DiscussionWeek11.Rmd
+++ b/data607/607 Discussion/Data607DiscussionWeek11.Rmd
@@ -5,11 +5,16 @@ date: "11/7/2018"
 output: html_document
 ---
 
+https://github.com/StephRoark/cunymsds/blob/master/data607/607%20Discussion/Data607DiscussionWeek11.Rmd
+
 Spotify Music for Everyone - Discover Weekly Recommender System
 
 https://www.spotify.com/us/discoverweekly/
 
-1. Perform a Scenario Design analysis as described below.  Consider whether it makes sense for your selected recommender system to perform scenario design twice, once for the organization (e.g. Amazon.com) and once for the organization's customers.
+
+Every Monday morning Spotify will deliver a custom playlist of 30 new songs. These songs are specially curated based on your preferences and while it may take a little bit of time for spotify to get to know you and your preferences, they will soon be suggesting new songs that you would never have found on your own. Spotify's Discover weekly delivers new music suggestions based on a recommender system which finds similarities between the users and their song preferences in order to make match up or compare the users and make new song recommendations.
+
+1. Perform a Scenario Design analysis as described below.  
 
 Spotify Discover Weekly:
 
@@ -17,7 +22,7 @@ Spotify Discover Weekly:
 
 - User's Key Goals - finding music that matches their listening preferences without having to search for it
 
-- Accomplishing Goals - Spotify creates a list of music each week that is supposed to be similar or something they user might like based on previous listening preferences
+- Accomplishing Goals - Spotify creates a list of music each week that is supposed to be similar or something that the user might like based on previous listening preferences
 
 
 2. Attempt to reverse engineer what you can about the site, from the site interface and any available information that you can find on the Internet or elsewhere.
