--- a/data607/FinalProject/SeattlesPerfectWeekend.Rmd
+++ b/data607/FinalProject/SeattlesPerfectWeekend.Rmd
@@ -1,11 +1,9 @@
 ---
-title: 'Final Project - Seattle’s Perfect Weekend: Fact or Fiction?'
+title: 'Seattle’s Perfect Summer: Fact or Fiction?'
 author: "Stephanie Roark"
 date: "12/9/2018"
 output: html_document
 ---
-
-#Seattle's Perfect Summer: Fact or Fiction?
 
 The weather in the Pacific Northwest is notoriusly rainy and gloomy, but the summers are gloriously full of perfect weather, or at least that's what we believe. How many days are actually perfect?
 
@@ -17,7 +15,7 @@ The NOAA website has available a weather dataset measured at Seattle-Tacoma Airp
 
 The EPA has a pre-generated air quality dataset which contains the air quality index by day for every county in the US and spanning from 01.01.1980 to 11.27.2018: [AQI]("https://aqs.epa.gov/aqsweb/airdata/download_files.html")
 
-##Data
+###Data
 
 Let's start by loading the datasets and taking a look at their structure.
 
@@ -28,14 +26,20 @@ library(knitr)
 library(lubridate)
 library(chron)
 library(rvest)
+require(devtools)
+install_github("Displayr/flipTime")
+library(flipTime)
 ```
 
 Load the Seattle weather data:
 
 ```{r SEAWeather}
+#read in seattle weather
 SeattleWeather <- readr::read_csv("SeattleWeather_1948_2017.csv")
+#take a look at the data
 kable(head(SeattleWeather))
 kable(tail(SeattleWeather))
+#look at the structure of the data
 str(SeattleWeather)
 ```
 
@@ -48,7 +52,8 @@ Next we must consider air quality as the recent wildfires on the west coast have
 We load each year of AQI data from 1980 to present, filtering for only Seattle, King County, Washington, and then create a single data frame for all the years of data.
 
 ```{r load AQIdata}
-
+#load the code from the EPA and create a table from all the years
+#after data was read in and stored in a .csv, code was removed to allow for faster knitting
 #data_list <- list()
 #for(year in 1980:2018) {
 #    temp <- tempfile()
@@ -62,10 +67,12 @@ We load each year of AQI data from 1980 to present, filtering for only Seattle, 
 #    unlink(temp)
 #}
 #AQIdata <- do.call("rbind", data_list)
-
+#load the .csv created from reading in the downloaded AQI year data
 AQIdata <- readr::read_csv("AQI_KING.csv")
+#take a look at the data
 kable(head(AQIdata))
 kable(tail(AQIdata))
+#look at the structure of the data
 str(AQIdata)
 ```
 
@@ -83,23 +90,19 @@ AllWeather <- inner_join(SeattleWeather, AQIdata, by = c("DATE" = "Date"))
 #look at how the new table is structured
 str(AllWeather)
 
-#look at the numberic values
-#kable(AllWeather %>%
-#    select_if(is.numeric) %>%
-#    skimr::skim())
-
+#look at the sumamry statistics of air quality
 kable(AllWeather %>%
     select_if(is.numeric) %>%
     skimr::skim(AQI))
-
+#look at the sumamry statistics of max temperature
 kable(AllWeather %>%
     select_if(is.numeric) %>%
     skimr::skim(TMAX))
-
+#look at the sumamry statistics of min temperature
 kable(AllWeather %>%
     select_if(is.numeric) %>%
     skimr::skim(TMIN))
-
+#look at the sumamry statistics of precipitation
 kable(AllWeather %>%
     select_if(is.numeric) %>%
     skimr::skim(PRCP))
@@ -109,11 +112,15 @@ sum(is.na(AllWeather))
 
 ```
 
+From the numberic summary statistics, we can see that AQI, TMAX, TMIN, and PCRP have little or no missing data, reasonable mins and maxs, and the histograms show that the data is normally distributed.
+
+####Visualizing the Data
+
 Now that we have our two datasets joined together, let's take a look at the max and min temp ranges for each year with air quality.
 
 ```{r airqualityindex_plot,fig.width=7,fig.height=21}
 #plot tmin and tmax against date - color green for good days and red for bad
-AllWeather %>% #filter(year(DATE) < 1985 ) %>%
+AllWeather %>% 
     mutate(year = year(DATE), day_of_year = yday(DATE) ) %>%
     ggplot(aes(x=day_of_year, ymin=TMIN, ymax=TMAX, colour=AQI)) +
     geom_linerange(size=0.5) +
@@ -124,7 +131,6 @@ AllWeather %>% #filter(year(DATE) < 1985 ) %>%
     xlab("Day of Year") + ylab("Temp (F, min to max)") +
     ggtitle("Maximum and Minimum Temperature with Air Quality from 1980 to 2017") +
     theme_minimal()
-
 ```
 
 From the plots we can see that air quality tends to be an issue in the summer time. The temperature range is pretty consistent throughout the year.
@@ -132,6 +138,7 @@ From the plots we can see that air quality tends to be an issue in the summer ti
 And now the precipitation by day for each year. 
 
 ```{r rain_plot,fig.width=7,fig.height=21}
+#plot precipation by year
 AllWeather %>% 
     mutate(year = year(DATE), day_of_year = yday(DATE) ) %>%
     ggplot(aes(x=day_of_year, y=PRCP)) +
@@ -142,12 +149,15 @@ AllWeather %>%
     scale_y_continuous(breaks=c(0,0.5,1)) +
     ggtitle("Precipitation from 1980 to 2017") +
     theme_classic()
-
 ```
 
 There are definite gaps in the precipitation each year which makes sense as the summers tend to be very dry. It is interesting to see how the dry weather gaps do not occur consistently at the same time of year.
 
+###Perfect Weather
+
 So, now that we have visualized the weather and air quality in Seattle, we can begin to define what perfect weather is. We can select a "perfect" temperature range, let's say only the days with TMIN and TMAX between 60 and 80 degrees F, and also days with no rain. We can assume that given this temperature range, the precipitation that falls will be rain rather than snow. One approach to selecting would be to filter the dataset for RAIN being FALSE, but this does not allow for any precipitation at all. Instead,let's consider the PCRP variable which is inches of rain measured in a day. We can filter for precipitation less than a certain amount of rain in inches to account for the common occurence of rain over night and this approach will allow for sensitivity testing of edge perfect days. The data may be sensitive close to the ranges that we select, so we will want to examine the data near our range to see if there is a great difference in perfect days.
+
+####Sensitivity Testing for AQI and Temperature Range
 
 ```{r temprange}
 #let's first look at the number of days in the 60-80 degree range
@@ -167,7 +177,6 @@ Temp Range (F)  |          Days within Temp Range        | Percentage
         55 - 85 | `r count(SeattleWeather_TempRange5585)`| `r round(count(SeattleWeather_TempRange5585)/nrow(AllWeather)*100, 2)`%
 
           
-
 There's a vast difference in the percentage of days between the temp range of 60 and 80 which is `r round(count(SeattleWeather_TempRange6080)/nrow(AllWeather)*100, 2)`%, and between 55 and 85 which is `r round(count(SeattleWeather_TempRange5585)/nrow(AllWeather)*100, 2)`%. We will go with the later because some people might be a little less sensitive to the temperature range and we can consider more possible perfect days.
 
 Filtering for precipitation range:
@@ -203,18 +212,19 @@ Rain Amount(In) |           Days with Rain           | Percentage
            0.01 |`r count(SeattleWeather_noRain0.01)`| `r round((count(SeattleWeather_noRain0.01)/nrow(AllWeather))*100,2)`%
            0.03 |`r count(SeattleWeather_noRain0.03)`| `r round((count(SeattleWeather_noRain0.03)/nrow(AllWeather))*100,2)`%
            0.05 |`r count(SeattleWeather_noRain0.05)`| `r round((count(SeattleWeather_noRain0.05)/nrow(AllWeather))*100,2)`%
+           0.10 |`r count(SeattleWeather_noRain0.1) `| `r round((count(SeattleWeather_noRain0.1)/nrow(AllWeather))*100,2)`%
            
 
-
-The percentage of days with less than or equal to 0.01 inches of precipitation is `r round((count(SeattleWeather_noRain0.01)/nrow(AllWeather))*100,2)`%, 0.05 inches of precipitation is `r round((count(SeattleWeather_noRain0.05)/nrow(AllWeather))*100,2)`% while 0.1 is `r round((count(SeattleWeather_noRain0.1)/nrow(AllWeather))*100, 2)`%. There is much less sensitivity to days within the precipitation range, so we will go with the mid range.
+The percentage of days with less than or equal to 0.01 inches of precipitation is `r round((count(SeattleWeather_noRain0.01)/nrow(AllWeather))*100,2)`%, 0.05 inches of precipitation is `r round((count(SeattleWeather_noRain0.05)/nrow(AllWeather))*100,2)`% while 0.1 is `r round((count(SeattleWeather_noRain0.1)/nrow(AllWeather))*100, 2)`%. There is much less sensitivity to days within the precipitation range, so we will select 0.05 inches.
 
 Next, we need to choose only the dates where the air quality is listed as Moderate or Good.  We can use the Date and Category columns to filter for the moderate to good air quality days.
 
 ```{r prefect&AQI subsets}
-PerfectWeather <- AllWeather %>%
-    filter(TMAX <= 85 & TMIN >= 55) %>%
-    filter(PRCP <= 0.05) %>%
-    filter(AQI <= 100)
+# Create a new feature on AllWeather if the day is "perfect" or not
+AllWeather <- AllWeather %>%
+    mutate(PerfectDay = (TMAX <= 85 & TMIN >= 55 & PRCP <= 0.05 & AQI <= 100))
+#filter the complete weather data set 
+PerfectWeather <- AllWeather %>% filter(PerfectDay)
 
 str(PerfectWeather)
 ```
@@ -225,7 +235,7 @@ Let's take a look at the distribution of the perfect weather days.
 
 ```{r perfect weather table plot, fig.width=7,fig.height=21}
 #plot tmin and tmax against date - color green for good days and red for bad
-PerfectWeather %>% #filter(year(DATE) < 1985 ) %>%
+PerfectWeather %>% 
     mutate(year = year(DATE), day_of_year = yday(DATE) ) %>%
     ggplot(aes(x=day_of_year, ymin=TMIN, ymax=TMAX)) +
     geom_linerange(size=0.5) +
@@ -238,64 +248,113 @@ PerfectWeather %>% #filter(year(DATE) < 1985 ) %>%
 We see right away that 1980 and 1981 have fewer perfect days. Everyone in the Pacific Northwest recalls the events of May 18, 1980  when Mt. St. Helens erupted causing extremely poor air quality and possibly affecting the weather of those summers.
 
 
-```{r plot}
+###Statistical Analysis- Hypothesis Test
 
-#Kable(head())
+Our null hypothesis is that the number of perfect days per year is not changing over time. We can also write this out in an equation form:
 
-#str()
+H0 = there is no difference in the number of perfect days over time.
+H1 = there is a difference in the number of perfect days over time.
 
-# how many dates
-#table()
+We can use a linear model to evaluate whether there is a linear relationship between the number of perfect days per as a function of time. The equation for a linear model is $y = {\beta}_0 + {\beta}_1*x$.
 
-#plot 
-#plot()
+```{r lm}
+#summarise the number of perfect days by year
+PerfectWeatherYears <- PerfectWeather %>%
+    group_by( year=year(DATE) ) %>%
+    count()
+#linear regression model
+weather_model <- lm(n ~ year, PerfectWeatherYears)
+summary(weather_model)
 
+#plot the number of perfect days as a function of time
+plot(PerfectWeatherYears$n ~ PerfectWeatherYears$year, xlab = "Year", ylab = "Perfect Days / Year")
+abline(weather_model)
+
+#summary plot the model
+plot(weather_model)
+#histogram of the residuals
+hist(weather_model$residuals)
 ```
 
+Conditions for Regression:
+
+- The residuals of the model are nearly normal: we can see from the histogram of the residuals and Normal QQ plot shows that that they are nearly normally distributed.
+- The variability of the residuals is nearly constant: the Residuals vs. Fitted plot shows that the variability is constant.
+- The residuals are independent: the Residuals vs. Fitted plot also shows that the residuals are independent.
+- Each variable is linearly related to the outcome: the Perfect Days per year plotted against Year shows that they are linearly related.
+
+So, we can see from the model coefficients that the number of perfect days is increasing by `r round(weather_model$coefficients[2], 2)` days per year. The p-value for the model `r round(summary.lm(weather_model)$coefficients["year","Pr(>|t|)"],6)` or very close to zero and we can therefore reject our null hypothesis that the number of perfect weather days is not changing over time. The weather in the Pacific Northwest does appear to be changing over time with the number of days which fall into our definition of perfect weather increasing at `r round(weather_model$coefficients[2], 2)` days per year. Essentially, the PNW's reputation as a gloomy and dreary place to live is false as the weather is trending better every year. 
+
+###Weekends
 
 Finally, let's compare the data over the range of years to find how many of these perfect days coincide with weekends or when festivals and events are happening in the area?
-
-####Weekends
 
 How many perfect days fall on weekends? It's a common myth here in the Seattle area that you know it's the weekend because it starts raining. Is it true that it rains more on the weekends?
 
 ```{r weekends}
-
-temp_weekend <- PerfectWeather %>% mutate( weekendday = is.weekend(DATE) )
-
+#filter perfect weather dates for weekend dates
 temp_filterweekend <- PerfectWeather %>% filter( is.weekend(DATE) )
-
-temp_filterholiday <- PerfectWeather %>% filter( is.holiday(DATE) )
-
-#is.holiday
+#number of weekend days that are pefect and the with proportion for perfect weather dates
+nrow(temp_filterweekend)
+nrow(temp_filterweekend)/nrow(PerfectWeather)
 ```
 
-####Events 
+The number of perfect weather days which fall on weekends is `r nrow(temp_filterweekend)` which is `r round(nrow(temp_filterweekend)/nrow(PerfectWeather),3)*100`% of the perfect weather days. Obviously, the old saying that you know it's the weekend because it starts raining is false as well.
+
+###Events
+
 We need data on events in the area which we can obtain from Seattle Open Data:
 
-[Seattle Special Events Data]("https://data.seattle.gov/Permitting/Special-Events-Permits/dm95-f8w5")
-
+[Seattle Special Events Data]("https://www.events12.com/seattle/")
 
 ```{r events}
-Seattle_events <- read_csv("Special_Events_Permits.csv")
+#read in the url and get data for each month
+baseurl <- 'https://www.events12.com/seattle/'
+months <- c('january','february','march','april','may','june',
+            'july','august','september','october','november','december')
+dates <- c()
+#get the dates for events from each month
+for( month in months ) {
+    url <- paste0(baseurl,month,'/')
+    events_data <- read_html(url)
+    datestext <- events_data %>% html_nodes(".date") %>% html_text()
+    dates <- c(dates, datestext)
+}
+#create a dataframe of all the dates
+ds <- c()
+for( datetxt in dates ) {
+    date <- AsDate(datetxt, on.parse.failure="warn")
+    ds <- c(ds,as_date(date))
+}
+#create a dataframe and transform the dates to the same format as PerfectWeather
+dates_df = as.data.frame(ds)
+dates_df %<>% transmute(date = as_date(ds)) %>% distinct() %>%
+    filter(!is.na(date)) %>%
+    filter(year(date) > 2017 & year(date) < 2020) %>%
+    mutate(month = month(date), day = day(date), year = 2017 ) %>%
+    mutate(date = mdy( paste0(month,"-",day,"-",year) ) ) 
+
+#how many event dates are there
+nrow(dates_df)
+
+#create an events table of events dates that fall on perfect days 
+Seattle_events <- inner_join(PerfectWeather %>% filter(DATE >= "2017-01-01")
+                             , dates_df, by = c("DATE" = "date"))
+#number of events on perfect days
+nrow(Seattle_events)
+kable(head(Seattle_events$DATE))
+kable(tail(Seattle_events$DATE))
 
 ```
 
-This data set consists of 2677 observations of 15 different variables including `r colnames(Seattle_events)`. We will need to address some formatting issues with this data so that we can join the events dates with our weather data. First, the dates are organized as Event Start Date and Event End Date and these will need to be changed to a single date. Second, we need to choose which Event Categories are relevant to our analysis.
 
+This data set consists of `r nrow(dates_df)` observations of `r ncol(dates_df)` different variables including `r colnames(dates_df)`. The dates were reformatted in order to join the events dates with our weather data. Obtaining data for prior events proved to be difficult and so we are using the 2017 perfect weather dates to comare to the 2018 event dates. We find the 22 events dates coincide with perfect weather dates and that these dates occur between June 1 and September 30. This is what we would expect as most perfect days occur at or near summer.
 
-Stat analysis- is the summer different than the rest of the year 
+###Conclusion
 
-H0 = summer is different 
-H1 = summer is the same as the rest of the year
+Though there a many days in Seattle which are gloomy and dreary, the number of perfect weather days is increasing every year. These perfect weather days tend to occur more in the summer time when the rain dries up; also, thus far the air quality issues of summer wildfires have not greatly impacted the number of perfect summer days. The weekends also do not tend to be more rainy than weekdays in the summer time. So everyone who doubts that Seattle is a beautiful place to live because of the rainy weather should know that with every coming year there are more perfect days on average.
+This analysis may partially explain, along with economic factors not analyzed here, 
+why the Seattle-metro area is a relocation destination as well as a summer time outdoor activity mecca.
 
-Is the number of summer perfect days/weekends different than the rest of the year? Has the number of perfect summer days decreased?
-
-```{r perfect days change}
-
-#statistical analysis
-#plot perfect days/weekends changes?
-
-```
 
 
